# wiki-to-graph

./: .gitignore  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
docs/: outputs-and-workflows.md  publishing.md
examples/llm-wiki/raw/: 01_attention_is_all_you_need.md  02_bert.md  03_gpt3.md  04_foundation_models.md  05_rlhf_instructgpt.md  06_chinchilla.md
examples/llm-wiki/wiki/: Alignment.md  Attention Mechanism.md  Autoregressive Language Model.md  BERT.md  Chinchilla.md  Compute-Optimal Scaling.md  Emergent Capabilities.md  Encoder-Decoder Architecture.md  Few-Shot Learning.md  Foundation Models.md  GPT-3.md  Homogenization.md  In-Context Learning.md  Layer Normalization.md  Masked Language Modeling.md  Multi-Head Attention.md  Next Sentence Prediction.md  Positional Encoding.md  Pre-training and Fine-tuning.md  Proximal Policy Optimization.md  RLHF.md  Reward Modeling.md  Scale and Scaling.md  Scaled Dot-Product Attention.md  Self-Attention.md  Transformer.md  index.md  log.md
skills/wiki-to-graph/: SKILL.md
skills/wiki-to-graph/references/: spec.md
skills/wiki-to-graph/scripts/: build_graph_viewer.py  wiki_to_graph.py
skills/wiki-to-kspace/: SKILL.md
skills/wiki-to-kspace/references/: spec.md
skills/wiki-to-kspace/scripts/: build_graph_viewer.py  wiki_to_kspace.py
